--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.16.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
     "react": "^18",
