--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "@tanstack/react-table": "^8.16.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
@@ -26,6 +27,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.4.5"
   }
