--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
