--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-table": "^8.16.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
