--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-table": "^8.16.0",
     "bootstrap": "^5.3.3",
     "next": "14.1.4",
